# llm-data-copilot

./: LICENSE  Readme.md
Backend/: .env.example  .gitignore  ByBenefitType.xlsx  Makefile  README.md  docker-compose.yml  pyproject.toml
Backend/app/: __init__.py  main.py
Backend/app/api/routes/: chat.py  datasets.py  documents.py
Backend/app/core/: __init__.py  config.py  logging.py  status_stream.py  tracing.py
Backend/app/domain/analysis/: executor.py  planner.py  prompt.py  router.py  schema.py  service.py
Backend/app/domain/chat/: ollama_service.py  prompt.py  rewrite_question_prompt.py  service.py
Backend/app/domain/datasets/: ingestion.py  models.py  service.py
Backend/app/domain/documents/: chunking.py  docx_reader.py  ingestion.py
Backend/app/domain/embeddings/: service.py
Backend/app/domain/retrieval/: service.py
Backend/app/infra/: __init__.py
Backend/app/infra/db/: deps.py  session.py
Backend/app/infra/db/models/: dataset.py  dataset_documents.py  dataset_rows.py  user.py
Backend/app/infra/vector_store/: __init__.py  base.py  qdrant.py
Backend/app/schemas/: chat.py  datasets.py  retrieved_chunck.py
Backend/app/scripts/: init_db.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/upload/: page.tsx
frontend/components/: DatasetList.tsx  DatasetRow.tsx  EmptyState.tsx  Header.tsx  ResultTable.tsx  StatusBadge.tsx  UploadForm.tsx
frontend/components/chat/: ChatInput.tsx  ChatPanel.tsx  MessageBubble.tsx  MessageList.tsx
frontend/lib/: api.ts  types.ts
(+8 files in other folders)
